[tool.poetry]
name = "optlab1"
version = "0.1.0"
description = ""
authors = ["Vladislav Vinokurov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
